# RF-Sentinel

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PHASE3.md  CHANGELOG.md  CONTRIBUTING.md  INTERFACES_PHASE3.md  LICENSE  MIGRATION_PLAN_PHASE3.md  README.md  ROADMAP.md  SECURITY.md  _config.yml  index.html  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  codeql.yml  pages.yml  security-audit.yml
assets/css/: main.css
assets/js/: academy.js  architecture.js  background.js  canvas-visualizations.js  dashboard.js  main.js  modals.js  signal-library.js  spectrum.js  virtual-lab.js  waterfall.js
docs/: api.md  architecture.md  development.md  quickstart.md
rf_sentinel/: __init__.py  main.py
rf_sentinel/analysis/: __init__.py  demodulator.py  spectrum.py  waterfall.py
rf_sentinel/api/: __init__.py  dependencies.py  main.py
rf_sentinel/api/routers/: __init__.py  captures.py  classification.py  detection.py  export.py  scans.py
rf_sentinel/api/schemas/: __init__.py
rf_sentinel/classification/: __init__.py  base.py  classifier.py  features.py  ml.py  ml_classifier.py  rule_based.py
rf_sentinel/config/: __init__.py  defaults.py
rf_sentinel/core/: __init__.py  config.py  events.py  exceptions.py  types.py
rf_sentinel/database/: __init__.py  models.py  session.py
rf_sentinel/database/repositories/: __init__.py  capture_repo.py  signal_repo.py
rf_sentinel/detection/: __init__.py  base.py  detector.py  energy.py  energy_detector.py  peak.py  peak_finder.py  threshold.py
rf_sentinel/devices/: __init__.py  mock.py  registry.py
rf_sentinel/plugins/: __init__.py
rf_sentinel/plugins/builtin/: __init__.py  energy_detection.py  template_detection.py
rf_sentinel/plugins/core/: base.py  loader.py  registry.py
rf_sentinel/plugins/samples/: __init__.py  energy_detection.py  template_detection.py
rf_sentinel/safety/: __init__.py  compliance.py  limits.py  watchdog.py
rf_sentinel/sdr/: __init__.py  base.py  hackrf.py  rtl_sdr.py
rf_sentinel/services/: __init__.py  capture_service.py  export_service.py  scan_service.py
rf_sentinel/ui/: __init__.py  main.py
rf_sentinel/ui/desktop/: __init__.py  main.py
rf_sentinel/utils/: __init__.py  conversions.py  logging.py  validators.py
tests/: __init__.py  conftest.py  test_analysis.py  test_api.py  test_sdr.py
