[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-sentinel"
version = "0.1.0"
description = "Plataforma Open Source para análisis de radiofrecuencia usando HackRF One y SDR"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "RF Sentinel Team", email = "team@rf-sentinel.org"}
]
maintainers = [
    {name = "RF Sentinel Team", email = "team@rf-sentinel.org"}
]
keywords = ["sdr", "hackrf", "radio", "spectrum", "rf", "opensource"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pyqtgraph>=0.13.0",
    "PySide6>=6.8.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
hackrf = ["pyhackrf>=0.1.0; platform_system=='Windows'", "hackrf>=0.1.0; platform_system!='Windows'"]
rtl = ["pyrtlsdr>=0.3.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
rf-sentinel = "rf_sentinel.main:cli"

[project.urls]
Homepage = "https://github.com/rf-sentinel/rf-sentinel"
Documentation = "https://docs.rf-sentinel.org"
Repository = "https://github.com/rf-sentinel/rf-sentinel.git"
Issues = "https://github.com/rf-sentinel/rf-sentinel/issues"
Changelog = "https://github.com/rf-sentinel/rf-sentinel/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["rf_sentinel*"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["rf_sentinel"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rf_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=rf_sentinel --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["rf_sentinel"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]